<resources>
    <string name="app_name">Dual Tic Tac Toe</string>
    <string name="button1">button1</string>
    <string name="button8">button8</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button9">button9</string>
</resources>