<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:background="#66FF66"
    tools:context=".MainActivity">
    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:rowCount="3"
        android:columnCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/button1"
            android:contentDescription="@string/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button2"
            android:contentDescription="@string/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button3"
            android:contentDescription="@string/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button4"
            android:contentDescription="@string/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button5"
            android:contentDescription="@string/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:contentDescription="@string/button6"
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:contentDescription="@string/button7"
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:contentDescription="@string/button8"
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button9"
            android:contentDescription="@string/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="18dp"
            android:padding="0dp"/>

    </GridLayout>

</RelativeLayout>